<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_search">Поиск</string>
    <string name="title_mediateka">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="title_black_theme">Темная тема</string>
    <string name="title_share_app">Поделиться приложением</string>
    <string name="title_write_to_support">Написать в поддержку</string>
    <string name="title_terms_of_use">Пользовательское соглашение</string>
    <string name="message_to_share_with_messegers">https://practicum.yandex.ru/android-developer/</string>
    <string name="type_for_all_messengers">text/plain</string>
    <string name="subject_for_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_to_share_with_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">rustikfah@yandex.ru</string>
    <string name="mailto">mailto:</string>
    <string name="url_for_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="hint_search">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clean_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="favorites_tracks_empty">Ваша медиатека пуста</string>
    <string name="new_playlist_header">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_disc">Описание</string>
    <string name="catalog">playlistmaker</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_complete">Завершить</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="delete_track">Удалить трек</string>
    <string name="are_you_sure_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="dialog_delete">Удалить</string>
    <string name="share_playlist_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="share_playlist_error">Не получилось поделиться плейлистом</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="are_you_sure_delete_playlist">Хотите удалить плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="track">трек</string>



</resources>