<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainActivityScreen"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/ys_display_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            style="@style/MainActivityButton"
            android:text="@string/title_search"
            app:icon="@drawable/search" />

        <Button
            android:layout_marginTop="@dimen/padding"
            android:id="@+id/media_library"
            style="@style/MainActivityButton"
            android:text="@string/title_mediateka"
            app:icon="@drawable/media_library"
            />

        <Button
            android:layout_marginTop="@dimen/padding"
            android:id="@+id/settings"
            style="@style/MainActivityButton"
            android:text="@string/title_settings"
            app:icon="@drawable/settings"
            />
    </LinearLayout>


</LinearLayout>