<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment"
    style="@style/SettingsActivityScreen"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/HeadWithArrowBack"
            android:text="@string/title_settings"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/block_height"
        android:paddingLeft="@dimen/padding"
        android:layout_marginTop="@dimen/margin">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/SettingActivitySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="14dp"
            android:layout_gravity="start|center"
            android:layout_marginTop="0dp"
            android:text="Темная тема"

            />

        <!--        <Switch-->
<!--            style="@style/SettingActivityText"-->
<!--            android:text="@string/title_black_theme"-->
<!--            >-->

<!--        </Switch>-->

    </LinearLayout>

    <LinearLayout
        style="@style/SettingActivityLinearLayout">

        <TextView
            style="@style/SettingActivityText"
            android:text="@string/title_share_app"
            />

<!--        <ImageView-->
<!--            android:id="@+id/share"-->
<!--            style="@style/SettingsIcons"-->
<!--            android:src="@drawable/share"-->

<!--            ></ImageView>-->
        <Button
            android:id="@+id/share"
            style="@style/SettingsIcon"
            android:drawableLeft="@drawable/share"
            >
        </Button>

    </LinearLayout>

    <LinearLayout
        style="@style/SettingActivityLinearLayout">

        <TextView
            style="@style/SettingActivityText"
            android:text="@string/title_write_to_support" />

<!--        <ImageView-->
<!--            android:id="@+id/support"-->
<!--            style="@style/SettingsIcons"-->
<!--            android:src="@drawable/support">-->
<!--        </ImageView>-->
        <Button
            android:id="@+id/support"
            style="@style/SettingsIcon"
            android:drawableLeft="@drawable/support"
            >
        </Button>

    </LinearLayout>

    <LinearLayout style="@style/SettingActivityLinearLayout">

        <TextView
            style="@style/SettingActivityText"
            android:text="@string/title_terms_of_use"
            />

<!--        <ImageView-->
<!--            android:id="@+id/user_agreement"-->
<!--            style="@style/SettingsIcons"-->
<!--            android:src="@drawable/arrow_forward" >-->
<!--        </ImageView>-->
        <Button
            android:id="@+id/user_agreement"
            style="@style/SettingsIcon"
            android:drawableLeft="@drawable/arrow_forward"
            >
        </Button>
    </LinearLayout>




</LinearLayout>