<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_theme_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back" >


        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title_settings"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/main_text_size"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:layout_marginLeft="24dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/block_height"
        android:paddingLeft="@dimen/padding"
        android:layout_marginTop="24dp"

        >
        <Switch
            android:text="@string/title_black_theme"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        </Switch>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/block_height"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_weight="1"
            android:text="@string/title_share_app"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/yandex_sans_display_regular"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/share">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/block_height"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/title_write_to_support"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/yandex_sans_display_regular"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/support" >


        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/block_height"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/title_terms_of_use"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/yandex_sans_display_regular"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_forward" >


        </ImageView>

    </LinearLayout>




</LinearLayout>